# live-share-output

./: .gitignore  .ocamlformat  Makefile  README.md  build.sh  deploy.sh  dune-project  tailwind.config.js  theos_logos.opam
back/: address.ml  audio_access.ml  back.ml  bible_access.ml  dune  gamification_engine.ml  interlinear_bible_access.ml  search_engine.ml  testament.ml  translations_manager.ml  user_access.ml  user_access_test.ml
blossom/: blossom.ml  blossom.mli  dune
ctx/: ctx.ml  dune
docs/: wireframes.excalidraw
front/: common.ml  dune  front.ml  reader.ml
import/: import.js  out.surql  package-lock.json  package.json  sur-import.sh
import/Text/: 4things.xhtml  Abbrev.xhtml  Help.xhtml  PL-01.xhtml  PL-02.xhtml  PL-03.xhtml  PL-04.xhtml  PL-05.xhtml  PL-06.xhtml  PL-07.xhtml  PL-08.xhtml  PL-09.xhtml  PL-10.xhtml  PL-11.xhtml  PL-12.xhtml  PL-13.xhtml  PL-14.xhtml  PL-15.xhtml  PL-16.xhtml  PL-17.xhtml  PL-18.xhtml  PL-19.xhtml  PL-20.xhtml  PL-21.xhtml  PL-22.xhtml  PL-23.xhtml  PL-24.xhtml  PL-25.xhtml  PL-26.xhtml  PL-27.xhtml  PL-28.xhtml  PL-29.xhtml  PL-30.xhtml  PL-31.xhtml  PL-32.xhtml  PL-33.xhtml  PL-34.xhtml  PL-35.xhtml  PL-36.xhtml  PL-37.xhtml  (+35 more)
server/: nginx.conf  supervisor.conf
static/: style.css
surrealdb/: dune  surrealdb.ml
test/: bible_access_test.ml  ctx_helper.ml  dune  interlinear_bible_access.ml
